# circuitSim

./: Cargo.toml
assets/: add  and  empty  flipflopt  nested
src/: cli_util.rs  element.rs  function.rs  lib.rs  main.rs  simulator.rs
