[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "simulator"
path = "src/lib.rs"

[[bin]]
name = "simulator_cli"
path = "src/main.rs"

[dependencies]
inquire = "0.6.2"
serde = { version = "1.0.194", features = ["serde_derive"] }
serde_json = "1.0.111"
